# rust-template

./: .dockerignore  .editorconfig  .env  .env.example  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: cd.yml  ci.yml  security.yml
docs/: ADVANCED_FEATURES.md  EVENT_SOURCING.md  SCALABILITY.md  SECURITY.md
examples/: basic_api.rs  feature_flags.rs  game_server.rs  postgres_event_sourcing.rs  websocket_server.rs
helm/api-management/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  secret.yaml
k8s/istio/: destination-rule.yaml  gateway.yaml  virtual-service.yaml
migrations/: 20240101000001_create_users_table.sql  20240101000002_create_events_table.sql
proto/: user.proto
scripts/: init-project.sh
src/: lib.rs  main.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  oauth2.rs  password.rs
src/cache/: mod.rs
src/config/: mod.rs  seed_data.rs  settings.rs
src/database/: mod.rs  mysql.rs  sqlite.rs
src/errors/: api_error.rs  mod.rs
src/features/: ab_testing.rs  flags.rs  mod.rs
src/gameserver/: leaderboard.rs  matchmaking.rs  mod.rs  session.rs
src/graphql/: mod.rs  resolvers.rs  schema.rs  types.rs
src/grpc/: mod.rs  user_service.rs
src/handlers/: api_key_handler.rs  health_handler.rs  mod.rs  oauth2_handler.rs  user_handler.rs
src/jobs/: background_job.rs  mod.rs  scheduler.rs
src/messaging/: kafka.rs  message_queue.rs  mod.rs  nats_client.rs  rabbitmq.rs
src/metrics/: mod.rs
src/middleware/: logger.rs  mod.rs  rate_limit.rs  redis_rate_limit.rs  request_id.rs
src/models/: mod.rs  request.rs  response.rs  user.rs
src/monitoring/: metrics.rs  mod.rs  tracing.rs
src/multitenancy/: middleware.rs  mod.rs  tenant.rs
src/patterns/: cqrs.rs  event_sourcing.rs  mod.rs  postgres_event_store.rs
src/routes/: health_routes.rs  mod.rs  user_routes.rs
src/security/: audit.rs  mod.rs  secrets.rs
src/services/: mod.rs  user_service.rs
src/state/: app_state.rs
src/utils/: mod.rs  performance.rs  validator.rs
src/websocket/: messages.rs  mod.rs  server.rs  session.rs
tests/: api_tests.rs  features_tests.rs  postgres_event_store_tests.rs  scalability_tests.rs  security_tests.rs
